--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./output.css" />
-    <title>Shopping cart</title>
+    <title>Shop</title>
   </head>
   <body class="p-10">
    
