Add more items and fix items division

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./output.css" />
     <title>Shop</title>
   </head>
-  <body class="p-10">
+  <body class="md:p-10 p-4">
    
     <script type="module" src="./index.js"></script>
   </body>
